--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 </body>
 
 
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/scripts.js"></script>
 
 
